# advent-of-code-2024

./: Cargo.toml  LICENSE  README.md
src/util/: bbox.rs  direction.rs  geom.rs  grid.rs  iter.rs  lpq.rs  mod.rs  point.rs
