[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Judson Powers"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.release]
lto = true

[profile.dhat]
inherits = "release"
debug = 1

[profile.profiling]
inherits = "release"
debug = true

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.39", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution dependencies
anyhow = "1.0.95"
array-init = "2.1.0"
arrayvec = "0.7.6"
bit-set = "0.8.0"
bytes = "1.9.0"
counter = "0.6.0"
derive_more = { version = "1.0.0", features = ['full'] }
either = "1.13.0"
enum-map = "2.7.3"
enumset = "1.1.5"
grid = "0.15.0"
halfbrown = "0.2.5"
itertools = "0.13.0"
memoize = "0.4.2"
multimap = "0.10.0"
nalgebra = "0.33.2"
nom = "7.1.3"
num = "0.4.3"
petgraph = "0.6.5"
rangemap = "1.5.1"
range-ext = "0.3.0"
rayon = "1.10.0"
regex = "1.11.1"
scan_fmt = "0.2.6"
slotmap = "1.0.7"
smallset = "0.1.1"
smallvec = "1.13.2"
soa_derive = "0.13.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.9"
tracing = "0.1.41"
zerocopy = "0.8.14"
